--- a/src/sass/lib/_sprite.sass
+++ b/src/sass/lib/_sprite.sass
@@ -1,6 +1,9 @@
 $icons: (0:0)
-$icons: map-merge($icons,(codedby: (X: 0px, Y:-9px, W: 47px, H: 5px, TW: 49px, TH: 14px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(coderiver: (X: 0px, Y:0px, W: 49px, H: 5px, TW: 49px, TH: 14px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(icon-check: (X: -215px, Y:-53px, W: 15px, H: 11px, TW: 264px, TH: 247px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(icon-download: (X: -168px, Y:-53px, W: 43px, H: 43px, TW: 264px, TH: 247px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(stars: (X: -168px, Y:0px, W: 96px, H: 49px, TW: 264px, TH: 247px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(step1: (X: 0px, Y:-125px, W: 139px, H: 122px, TW: 264px, TH: 247px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(step2: (X: 0px, Y:0px, W: 164px, H: 121px, TW: 264px, TH: 247px, IMG: '../img/icons.png')))
 
 
 // Gets an attribute from the sass map
@@ -37,15 +40,33 @@ $icons: map-merge($icons,(coderiver: (X: 0px, Y:0px, W: 49px, H: 5px, TW: 49px, 
 	+sprite-retina($i)	
 
 //
-//.icon-codedby
-//	width: 47px
-//	height: 5px
+//.icon-icon-check
+//	width: 15px
+//	height: 11px
 //	background-image: url('../img/icons.png')
-//	background-position: 0px -9px
+//	background-position: -215px -53px
 //
-//.icon-coderiver
-//	width: 49px
-//	height: 5px
+//.icon-icon-download
+//	width: 43px
+//	height: 43px
+//	background-image: url('../img/icons.png')
+//	background-position: -168px -53px
+//
+//.icon-stars
+//	width: 96px
+//	height: 49px
+//	background-image: url('../img/icons.png')
+//	background-position: -168px 0px
+//
+//.icon-step1
+//	width: 139px
+//	height: 122px
+//	background-image: url('../img/icons.png')
+//	background-position: 0px -125px
+//
+//.icon-step2
+//	width: 164px
+//	height: 121px
 //	background-image: url('../img/icons.png')
 //	background-position: 0px 0px
 //
