--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -75,7 +75,7 @@ strong
 	border-bottom: 3px solid #ff7200
 	&:hover
 		background-image: linear-gradient(to top, #ffab3e 0%, #ffbd3d 100%)
-		border-bottom: none
+		border-bottom-color: #FFAB3E
 .btn__under
 	padding-top: 5px
 	text-align: center
