--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -71,9 +71,11 @@ strong
 	span
 		vertical-align: middle
 .btn_orange
+	background-color: #ffa800
 	background-image: linear-gradient(to top, #ff940a 0%, #ffa800 100%)
 	border-bottom: 3px solid #ff7200
 	&:hover
+		background-color: #ffbd3d
 		background-image: linear-gradient(to top, #ffab3e 0%, #ffbd3d 100%)
 		border-bottom-color: #FFAB3E
 .btn__under
