--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -84,6 +84,11 @@ strong {
 	}
 	span {
 	vertical-align: middle;
+	position: relative;
+	z-index: 1;
+	}
+	i {
+		z-index: 1;
 	}
 }
 
@@ -91,10 +96,27 @@ strong {
 	background-color: #ffa800;
 	background-image: linear-gradient(to top, #ff940a 0%, #ffa800 100%);
 	border-bottom: 3px solid #ff7200;
+	position: relative;
+	@include tr(border-color 0.2s);
+	&:after {
+		content: '';
+		display: block;
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		opacity: 0;
+		background-color: #ffbd3d;
+		background-image: linear-gradient(to top, #ffab3e 0%, #ffbd3d 100%);
+		border-radius: 4px;
+		@include tr(opacity 0.2s)
+	}
+	&:hover:after {
+	opacity: 1;
+	}
 	&:hover {
-	background-color: #ffbd3d;
-	background-image: linear-gradient(to top, #ffab3e 0%, #ffbd3d 100%);
-	border-bottom-color: #ffab3e;
+		border-bottom-color: #ffab3e;
 	}
 }
 
